{
  "version": 4,
  "terraform_version": "1.9.0",
  "serial": 102,
  "lineage": "16531145-92ce-d072-8b38-b76f544d25cb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "new-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:245360719203:internet-gateway/igw-07922d131a15e85ed",
            "id": "igw-07922d131a15e85ed",
            "owner_id": "245360719203",
            "tags": {
              "Name": "learn-terraform-igw"
            },
            "tags_all": {
              "Name": "learn-terraform-igw"
            },
            "vpc_id": "vpc-010066db96dcfe686"
          },
          "dependencies": [
            "aws_vpc.new-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "new-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:245360719203:route-table/rtb-078bba9f9d986f81f",
            "id": "rtb-078bba9f9d986f81f",
            "owner_id": "245360719203",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07922d131a15e85ed",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "learn-terraform-rtb"
            },
            "tags_all": {
              "Name": "learn-terraform-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-010066db96dcfe686"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.new-igw",
            "aws_vpc.new-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "new-rtb-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-067e6f71c6e6bfb70",
            "route_table_id": "rtb-078bba9f9d986f81f",
            "subnet_id": "subnet-05482c7b534556b4c"
          },
          "dependencies": [
            "aws_internet_gateway.new-igw",
            "aws_route_table.new-rtb",
            "aws_subnet.subnets",
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0462b687b441a6830",
            "route_table_id": "rtb-078bba9f9d986f81f",
            "subnet_id": "subnet-0553cc54dcf3c00fb"
          },
          "dependencies": [
            "aws_internet_gateway.new-igw",
            "aws_route_table.new-rtb",
            "aws_subnet.subnets",
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:245360719203:security-group/sg-0985df35ccc50bf14",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0985df35ccc50bf14",
            "ingress": [],
            "name": "terraform-20240630113626205600000001",
            "name_prefix": "terraform-",
            "owner_id": "245360719203",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "learn-terraform-sg"
            },
            "tags_all": {
              "Name": "learn-terraform-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-010066db96dcfe686"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.new-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:245360719203:subnet/subnet-05482c7b534556b4c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05482c7b534556b4c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "245360719203",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "learn-terraform-subnet-0"
            },
            "tags_all": {
              "Name": "learn-terraform-subnet-0"
            },
            "vpc_id": "vpc-010066db96dcfe686"
          },
          "dependencies": [
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:245360719203:subnet/subnet-0553cc54dcf3c00fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0553cc54dcf3c00fb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "245360719203",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "learn-terraform-subnet-1"
            },
            "tags_all": {
              "Name": "learn-terraform-subnet-1"
            },
            "vpc_id": "vpc-010066db96dcfe686"
          },
          "dependencies": [
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "new-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:245360719203:vpc/vpc-010066db96dcfe686",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-036f2df50ec657c4f",
            "default_route_table_id": "rtb-0fca7db57c914e13c",
            "default_security_group_id": "sg-0bace78094499efab",
            "dhcp_options_id": "dopt-073673ad7e462a105",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-010066db96dcfe686",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fca7db57c914e13c",
            "owner_id": "245360719203",
            "tags": {
              "Name": "learn-terraform-vpc"
            },
            "tags_all": {
              "Name": "learn-terraform-vpc"
            }
          }
        }
      ]
    }
  ]
}